--- a/views/contact.html
+++ b/views/contact.html
@@ -42,44 +42,47 @@
         </div>
       </div>
     </nav>
+    <!-- endNavbar -->
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-5 mt-5">
                 <form action="">
                     <div>
-                        <h1 class="text-center">GET IN TOUCH</h1>
+                        <h1 class="text-center">CONTACT ME HERE!</h1>
                     </div>
                     <div class="mb-3 mt-4">
                         <label for="name" class="form-label fw-bold">Name</label>
-                        <input type="text" class="form-control shadow-sm" id="name">
+                        <input type="text" class="form-control shadow-sm" id="name" >
                     </div>
                     <div class="mb-3">
                         <label for="email" class="form-label fw-bold">Email</label>
-                        <input type="text" class="form-control shadow-sm" id="email">
+                        <input type="text" class="form-control shadow-sm" id="email" >
                     </div>
                     <div class="mb-3">
                         <label for="phone" class="form-label fw-bold">Phone Number</label>
-                        <input type="text" class="form-control shadow-sm" id="phone">
+                        <input type="number" class="form-control shadow-sm" id="phone" >
                     </div>
                     <div class=" mb-3">
-                        <label for="select" class="form-label fw-bold">Subject</label>
-                        <select class="form-select" id="select" >
-                        <option selected></option>
-                        <option value="1">One</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
+                        <label for="select" class="form-label fw-bold">Subject</label > 
+                        <select class="form-select" id="subject" >
+                          <option selected disabled></option>
+                          <option >Collaboration</option>
+                          <option >Discussion</option>
+                          <option >Hiring</option>
                         </select>
                     </div>
                     <div class="mb-3">
-                        <label for="exampleFormControlTextarea1" class="form-label fw-bold">Your Message</label>
-                        <textarea class="form-control h-25 shadow-sm" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        <label for="exampleFormControlTextarea1" class="form-label fw-bold">Your Address</label>
+                        <textarea class="form-control h-25 shadow-sm" id="address" rows="3" required></textarea>
                     </div>
                     <div class="mt-5 text-end">
-                        <button type="button" class="btn btn-dark px-3 rounded-4">Submit</button>
+                        <button type="button" onclick="getData()" class="btn btn-dark px-3 rounded-4">Submit</button>
                     </div>
                 </form>
             </div>
         </div>
     </div>
+    <script src="/public/js/contact.js"></script>
 </body>
+
 </html>
