--- a/views/index.html
+++ b/views/index.html
@@ -78,7 +78,7 @@
               <div class="col-sm-6">
                   <div>
                       <div class="card-body mt-3" >
-                          <img id="homeImg" class="rounded mx-auto d-block" src="/public/image/faris.jpg" width="200" alt="Muhammad Afra Faris" />
+                          <img id="homeImg" class="rounded mx-auto d-block" src="/public/images/faris.jpg" width="200" alt="Muhammad Afra Faris" />
                           <h5 class="card-title" style="text-align: center;">Muhammad Afra Faris</h5>
                           <p class="card-text" style="text-align: center;">Fullstack Developer</p>
                       </div>
@@ -89,7 +89,7 @@
     <!-- End Profile -->
 
     <!-- My Project -->
-    <div class="container bg-light mt-5">
+    <div class="container bg-light mt-5 pb-4">
         <div class="row justify-content-center">
             <div class="col text-center m-5">
                 <h1>My Project</h1>
@@ -99,7 +99,7 @@
         <div class="row mt-4 justify-content-around gap-3">
           {{range $index, $data := .Project}}
             <div class="card" style="width: 18rem;">   
-                <img class="pt-2 rounded-3" src="/upload/{{$data.Image}}" alt="" style="max-width:100%; max-height:100%;">
+                <img class="pt-2 rounded-3" src="/upload/{{$data.Image}}" alt="" style="max-width:100%; max-height:175px;">
                 <a style="text-decoration: none; color: black;" href="/detailProject/{{$data.Id}}">
                 <h5 class="card-title">{{$data.Title}}</h5></a>
                 <h6 style="color: rgb(158, 158, 158); display: inline; " class="mx-3">{{$data.Duration}}</h6>
